WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106396
marquee special-case in RenderBlock is not needed
https://bugs.webkit.org/show_bug.cgi?id=106396
Summary
marquee special-case in RenderBlock is not needed
Ojan Vafai
Reported
2013-01-08 16:20:52 PST
marquee special-case in RenderBlock is not needed
Attachments
Patch
(1.86 KB, patch)
2013-01-08 16:22 PST
,
Ojan Vafai
simon.fraser
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ojan Vafai
Comment 1
2013-01-08 16:22:52 PST
Created
attachment 181798
[details]
Patch
Ojan Vafai
Comment 2
2013-01-08 16:23:29 PST
Simon, since you reviewed the original patch, mind reviewing this?
Ojan Vafai
Comment 3
2013-01-08 16:31:41 PST
Comment on
attachment 181798
[details]
Patch Thanks!
WebKit Review Bot
Comment 4
2013-01-08 18:45:01 PST
Comment on
attachment 181798
[details]
Patch Rejecting
attachment 181798
[details]
from commit-queue. Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', u'--status-host=queues.webkit.org', ..." exit_code: 2 cwd: /mnt/git/webkit-commit-queue Last 500 characters of output: commit-queue/Source/WebKit/chromium/third_party/v8-i18n --revision 159 --non-interactive --force --accept theirs-conflict --ignore-externals' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' 54>At revision 159. ________ running '/usr/bin/python tools/clang/scripts/update.py --mac-only' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Full output:
http://queues.webkit.org/results/15764302
Ojan Vafai
Comment 5
2013-01-09 10:11:55 PST
Committed
r139203
: <
http://trac.webkit.org/changeset/139203
>
Daniel Bates
Comment 6
2013-01-09 10:26:07 PST
(In reply to
comment #5
)
> Committed
r139203
: <
http://trac.webkit.org/changeset/139203
>
This commit inadvertently added a duplicate ChangeLog entry for
Bug #105035
. Removed duplicate ChangeLog entry and committed in <
http://trac.webkit.org/changeset/139205
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug