Source/WebCore: marquee special-case in RenderBlock is not needed https://bugs.webkit.org/show_bug.cgi?id=106396

Reviewed by Simon Fraser.

This was added in http://trac.webkit.org/changeset/105772. The layout test
in that patch (which is disabled) works and the original site that was broken
also still works.

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::computePreferredLogicalWidths):

LayoutTests: Implement CSS computed style value for transition shorthand
https://bugs.webkit.org/show_bug.cgi?id=105035

Patch by Alexis Menard <alexis@webkit.org> on 2013-01-09
Reviewed by Dean Jackson.

Uncomment existing tests to cover the new feature.

* transitions/transitions-parsing-expected.txt:
* transitions/transitions-parsing.html:

Canonical link: https://commits.webkit.org/124652@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139203 268f45cc-cd09-0410-ab3c-d52691b4dbfc